UTC-574: Fix jumpy hero on mobile.

--- a/source/default/_patterns/00-protons/legacy/css/components/UTC-custom-blocks/_utc_hover_images.css
+++ b/source/default/_patterns/00-protons/legacy/css/components/UTC-custom-blocks/_utc_hover_images.css
@@ -280,6 +280,7 @@ figure.lt-blue-overlay .image-title {
     filter: unset;
     cursor: none;
     opacity: 1!important;
+    width: 100%!important;
   }
   figure.utc-hover-image-effect picture:after {
     display:none!important;
