--- a/source/default/_patterns/00-protons/legacy/css/global.css
+++ b/source/default/_patterns/00-protons/legacy/css/global.css
@@ -385,23 +385,6 @@ a.diagonal.light-gray-hero:hover svg{
   background-color:transparent!important;
   background-position: 0;
 }
-#utcitsveltewordpressnewsapp a > div {
-  transition: all .4s ease-in-out;
-  background-color: transparent!important;
-  background-image: linear-gradient(-257deg,#e7eaee 50%,transparent 0);
-  background-position: 100%;
-  background-size: 400%;
-  transition: all .75s ease-in-out;
-  font-weight: 400;
-margin-right:1rem;
-}
-#utcitsveltewordpressnewsapp a > div:hover {
-  background-position: 0;
-}
-/****hide the Localist logo***/
-#lclst_widget_footer {
-  visibility: hidden;
-}
 
 b, strong {
   @apply font-bold;
@@ -519,6 +502,12 @@ ul.pager__items li a:hover {
 } 
 /*end search page adjustments*/
 
+/****blazy styles***/
+.section-hero .b-bg, .utc-hero-section .b-bg {height:100%!important}
+.is-b-loading:not(.is-b-loaded):not([data-animation])::before {
+  background: #166484!important;
+}
+
 @media screen and (max-width: 1024px) {
   .section-hero {@apply relative z-1}
   .utc-hero-image-default .order-first, .utc-hero-image-default .order-last {
@@ -527,11 +516,13 @@ ul.pager__items li a:hover {
   .utc-hero-image-default .order-first {
     @apply mt-8;
   }
-  .node__content > .utc-hero-section:first-child {
+
+  /*
+    .node__content > .utc-hero-section:first-child {
     @apply p-0 -mt-4
   }
   .node__content > .utc-hero-section:first-child .themag-layout__region {
-    @apply p-0;
+    @apply p-12 pb-0;
   }
   main.main-reduce-top-margin {
     @apply pt-0 -mt-4;
@@ -544,16 +535,19 @@ ul.pager__items li a:hover {
   .utc-hero-section .container-full {
     @apply p-0;
   }
+
   .section-hero .container-full .row, 
   .utc-hero-section .container-full .row  {
     @apply mx-0;
-  }
+  }*/
+
 }
 @media screen and (max-width: 768px) {
   .section-hero {@apply bg-white shadow-utc}
-  .container-full, .themag-layout--my-default {
+  main {overflow-x:hidden;}
+  /*.container-full, .themag-layout--my-default {
     @apply px-4;
-  }
+  }*/
   .container-full .block--region-content-header.block--page-title-block .page-title {
     @apply text-lg;
   }
@@ -587,8 +581,3 @@ foreignObject > div > div {
   align-items: center;
 }
 
-/****blazy styles***/
-.section-hero .b-bg, .utc-hero-section .b-bg {height:100%!important}
-.is-b-loading:not(.is-b-loaded):not([data-animation])::before {
-  background: #166484!important;
-}
